# Beauty-Consumption-Analysis

./: .gitignore  README.md  Report Generation Instructions.txt  beauty_consumption_report.tex  pyproject.toml
data/processed/: beauty_income_panel.parquet
data/raw/comtrade/: TradeData_7_23_2025_12_10_57.csv  TradeData_7_23_2025_12_12_16.csv  TradeData_7_23_2025_12_12_50.csv  TradeData_7_23_2025_12_9_11.csv  TradeData_7_24_2025_16_44_26.csv  TradeData_7_24_2025_16_45_15.csv  TradeData_7_24_2025_16_46_3.csv  TradeData_7_24_2025_16_46_33.csv
data/raw/worldbank/Consumption/: Metadata_Indicator_API_NE.CON.PRVT.PC.KD_DS2_en_csv_v2_30892.csv
data/raw/worldbank/GDP per capita/: API_NY.GDP.PCAP.PP.KD_DS2_en_csv_v2_20423.csv  Metadata_Indicator_API_NY.GDP.PCAP.PP.KD_DS2_en_csv_v2_20423.csv
data/raw/worldbank/Inflation /: Metadata_Indicator_API_FP.CPI.TOTL_DS2_en_csv_v2_37831.csv
figures/: HT2_methodology_notes.txt  T1_correlations.csv  T1_elasticity_regression.txt  T1_piecewise_per_country.csv  T1_piecewise_results.csv  T1_segmented_analysis_summary.txt  T1_segmented_inflection_points.csv  T1_summary.txt  T2-1_income_matched_snapshot.csv  T2_india_growth_test.json  T2_interpretive_analysis.txt  T3_elasticity_results.csv  T3_piecewise_results.csv
src/scripts/: 00_build_master_dataset.py  01_task1_statistical_exploration.py  02_task2_comparative_benchmarking.py  03_task3_hypothesis_testing.py
